# collectd

./: .gitignore  .gitmodules  README
cmake/: CMakeLists.txt  collectd.conf  config.h  config.h.in
cmake/features/: collectd_make_feature.cmake  environment.cmake
cmake/utils/: intf.cmake  plugins.cmake
src/: capture.c  types.db
